Fixes spacing in header on mobiles

--- a/app/assets/stylesheets/application/header.css.sass
+++ b/app/assets/stylesheets/application/header.css.sass
@@ -42,3 +42,6 @@
 @media (max-width: 480px)
   #header li span.figure
     display: none
+  #header li a
+    padding-left:   .66ex
+    padding-right:  1ex
